# obj-viewer

./: 2demo.py  3demo.py  README.md  another3demo.py  pyproject.toml
1/: 2demo.py  3demo.py
2/: field.py  shader.py  tri.py
src/obj_viewer/: __init__.py  __main__.py  hello.py  tuple_flatten_demo.py
src/obj_viewer/assets/: logo3d.mtl
src/obj_viewer/demos/: __init__.py  field_demo.py  model_demo.py  shader_demo.py  shapes_demo.py  tri_demo.py
