[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obj-viewer"
version = "0.1.0"
description = "Legacy OBJ/pyglet demo viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyglet>=2.1.3",
    "tqdm>=4.67.1",
]

[project.scripts]
obj-viewer = "obj_viewer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/obj_viewer"]
